Worked on Firefox bug. No luck so far.

--- a/css/duss.css
+++ b/css/duss.css
@@ -188,6 +188,10 @@ section > i.fa {
 #about { background-color: #ECECEC; }
 #about .row:first-child { margin-top: 2%; }
 #about #carousel { cursor: pointer; }
+#about #carousel img {
+	width:900px;
+	height:225px;
+}
 #about p {
 	font-size: 16px;
 	line-height: 1.789;
@@ -218,7 +222,7 @@ section > i.fa {
 
 	cursor: pointer;
 }
-#projects .project-listing:hover > h3 { text-decoration: underline; }
+
 #projects .project-listing > img { height: 200px; }
 @media screen and (max-width: 991px) {
 	#projects .positioner { width: initial; }
@@ -363,4 +367,28 @@ section > i.fa {
 		    -ms-transform: scale(1.0);
 		        transform: scale(1.0);
 	}
+}
+
+.text {
+position:relative;
+text-align: center;
+margin-left:1px;
+margin-right: 0px;
+color: #FFFFFF;
+text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+font-size: 18px;
+}
+
+.carouselimg{
+  border-radius: 25px;
+  border: 5px solid #EEEEEE;
+  margin: 5px;
+  background-color: #FFFFFF;
+  display: block;
+  max-width: 100%;
+  height: auto;
+  opacity: 0.7;
+   transition: opacity .25s ease-in-out;
+   -moz-transition: opacity .25s ease-in-out;
+   -webkit-transition: opacity .25s ease-in-out;
 }
